Fixed image not scaling on mobile

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ body {
 }
 
 .hero__heading span {
-  background: #18bbfc; /* fallback for old browsers */
+  background: black; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     -225deg,
     #f4f3f7 0%,
@@ -252,7 +252,7 @@ body {
 
 .hero__description {
   font-size: 60px;
-  background: #18bbfc; /* fallback for old browsers */
+  background: black; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     -225deg,
     #f4f3f7 0%,
@@ -435,6 +435,11 @@ body {
   #4b4b49 100%);
 }
 
+.main__img--img {
+  height: 500px;
+  width: 500px;
+}
+
 .main__icon {
   color: #fff;
   font-size: 64px;
@@ -493,6 +498,11 @@ body {
     width: 425px;
   }
 
+  .main__img--img {
+    height: 425px;
+    width: 425px;
+  }
+
   .main__content {
     text-align: center;
     margin-bottom: 4rem;
@@ -517,6 +527,11 @@ body {
   .main__img--card {
     width: 250px;
     height: 250px;
+  }
+
+  .main__img--img {
+    height: 250px;
+    width: 250px;
   }
 
   .fa-users,
